fix issue with lower case in benefits, center get starte button on mobile, the header logo now take you to home view

--- a/docs/_sass/docstrap/responsive.scss
+++ b/docs/_sass/docstrap/responsive.scss
@@ -45,6 +45,10 @@
 					left: calc(50% - 25vw) !important;
 				}
 			}
+
+			& a {
+				left: calc(50% - 6em) !important;
+			}
 		}
 		.benefits {
 			grid-auto-flow: unset !important;
